# rvs_laboratories_10

./: .gitignore  CMakeLists.txt
appendix/: report.tex  Задание.docx
appendix/images/: output.ppm
rvs_laboratories_10/: rvs_laboratories_10.cu
